change of webhook

--- a/debug-webhook.html
+++ b/debug-webhook.html
@@ -189,7 +189,7 @@
                 {
                     id: '1',
                     name: 'On-Demand Research Handler',
-                    url: 'https://northsnow.app.n8n.cloud/webhook-test/query',
+                    url: 'https://elijahakinola26.app.n8n.cloud/webhook-test/query',
                     type: 'on-demand',
                     description: 'Handles immediate market research requests',
                     active: true,
